Update for page response